--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="js/jtest.css">
-    <script src="js/jquery.js"></script>
-    <script src="js/jtest.js"></script>
+    <link rel="stylesheet" href="all.css">
+    <script src="jquery.js"></script>
+    <script src="all.js"></script>
 </head>
 <body>
     <h1 class="title">1234</h1>
