--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
     <script src="all.js"></script>
 </head>
 <body>
-    <h1 class="title">1234</h1>
-    <p class="p1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod velit eos cum incidunt molestiae ducimus magni debitis facilis officiis iure.
-    </p>
-    <p class="p2"style="width:300px;height:5    00px;background:black;"></p>
+    <div class="wrap">
+        <div>
+            <header>最上面</header>
+        </div>
+            <h1 class="title">1234</h1>
+            <p class="p1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod velit eos cum incidunt molestiae ducimus magni debitis facilis officiis iure.
+            </p>
+            <p class="p2"style="width:300px;height:5    00px;background:black;"></p>
+
+    </div>
 </body>
 </html>
