--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <div class="wrap">
         <div>
-            <header>最上面</header>
+            <header>最上面
+                <a href="https://ceckmateeeee21.github.io/hexSchool/plan.html">aaas</a>
+            </header>
         </div>
             <h1 class="title">1234</h1>
             <p class="p1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod velit eos cum incidunt molestiae ducimus magni debitis facilis officiis iure.
