--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="wrap">
         <div>
-            <header>最上面
-                <a href="https://ceckmateeeee21.github.io/hexSchool/plan.html">aaas</a>
+            <header>
+                <a href="https://ceckmateeeee21.github.io/hexSchool/plan.html">方案費用</a>
             </header>
         </div>
             <h1 class="title">1234</h1>
