--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 </head>
 <body>
     <div class="wrap">
-        <div>
+        <div class='top-left'>
             <header>
-                <a href="https://ceckmateeeee21.github.io/hexSchool/plan.html">方案費用</a>
+                <a href="plan.html">方案費用
+                <img src="chatTalker_images/logo.png" alt="homeLogo">
+                </a>
             </header>
         </div>
             <h1 class="title">1234</h1>
