--- a/plan.html
+++ b/plan.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <div class="backHome">
-            <a href="https://ceckmateeeee21.github.io/hexSchool/">backHome</a>
+            <a href="index.html">backHome</a>
             <h1> 我是plan h1</h1>
         </div>
     </div>
