--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
 </head>
 <body>
     <div class="wrap">
-        <div class='top-left'>
-            <header>
-                <a href="plan.html">方案費用
-                <img src="chatTalker_images/logo.png" alt="homeLogo">
-                </a>
-            </header>
+        <div class='top'>
+            
+                <div class="top-left">
+                        <a href="index.html"><img src="chatTalker_images/logo.png" alt="homeLogo"></a>
+                </div>
+                <div class="top-right">
+                <a href="plan.html">方案費用</a>
+                </div >
+                  
+        </div>
+        <div class="">
+            <h1></h1>
+            <h1></h1>
+            <p></p>
         </div>
             <h1 class="title">1234</h1>
             <p class="p1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod velit eos cum incidunt molestiae ducimus magni debitis facilis officiis iure.
