--- a/testindex.html
+++ b/testindex.html
@@ -24,7 +24,7 @@
                 <div class="role4">
                     <ul >
                         <li class="role-item">
-                            <img src="https://laron9486.github.io/Project_Mission02/images/1.%E9%A6%96%E9%A0%81/work-KOL.png" alt="role-1">
+                            <img src="chatTalker_images/ch01.svg" alt="role-1">
                         </li>
                         <li class="role-item">
                             <img src="chatTalker_images/ch02.svg" alt="role-2">
@@ -44,7 +44,8 @@
    
         <div class="footer-banner">
             <div class="container">
-                <h1><a href="">方案費用</a></h1>
+                <p>\ 美好用戶體驗，從對話開始 /</p>
+                <h1 class="planlogoGreen"><a   href="#">方案費用</a></h1>
             </div>
         </div>
 
