--- a/testindex.html
+++ b/testindex.html
@@ -28,6 +28,23 @@
            </div>
         </div>
     </div>
+
+    <!--背景圓形---->
+    
+        <div class="hero-ball"></div>
+        <div class="social">
+            <div class="container">
+                <div class="social-three">
+                    <p>三大平台，我來搞定</p>
+                    <ul>
+                        <li class="fb"></li>
+                        <li class="line"></li>
+                        <li class="ig"></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
      <div class="role-start">
         <div class="container">
             <h2 class="role-title">任何的角色，我都能給</h2>
