--- a/testindex.html
+++ b/testindex.html
@@ -37,9 +37,24 @@
                 <div class="social-three">
                     <p>三大平台，我來搞定</p>
                     <ul>
-                        <li class="fb"></li>
-                        <li class="line"></li>
-                        <li class="ig"></li>
+                        <li class="fb">
+                            <div class="fb-photo"></div>
+                            <h2>Facebook Messenger
+                                <p>結合粉絲專頁，提高粉絲互動率 <br>有效經營品牌社群</p>
+                            </h2>
+                        </li>
+                        <li class="fb"><!--套用依樣框小Fb設定-->
+                            <div class="line-photo"></div>
+                            <h2>LINE 官方帳號
+                                <p>融入日常生活，精準傳遞品牌資訊 打造個人化專屬服務</p>
+                            </h2>
+                        </li>
+                        <li class="fb"><!--套用依樣框小Fb設定-->
+                            <div class="ig-photo"></div>
+                            <h2>Instagram 商業帳號
+                                <p>貼近粉絲，提升品牌自然聲量 行銷、抽獎一站完成</p>
+                            </h2>
+                        </li>
                     </ul>
                 </div>
             </div>
