--- a/testindex.html
+++ b/testindex.html
@@ -120,10 +120,11 @@
                 </ul>
             
             <div class="data-des">
+                
                 <h2>快速了解客戶輪廓 建立品牌流量池</h2>
                 <p>深入用戶日常，成為用戶貼身好友 精準傳遞品牌資訊，打造個人化專屬服務 不知不覺深入用戶生活，成為用戶貼心的好朋朋:D</p>
                 <!--btnGreen-->
-                <h1 class="planlogoGreen"><a   href="#">方案費用</a></h1>
+                <h3 class="planlogoGreen"><a   href="#">方案費用</a></h3>
             </div>
             </div>
         </div>
@@ -133,9 +134,11 @@
    
         <div class="footer-banner">
             <div class="container">
-                <p>\ 美好用戶體驗，從對話開始 /</p>
-                <h1 class="planlogoGreen"><a   href="#">方案費用</a></h1>
-            </div>
+                <div class="f-p-btn">
+                    <p>\ 美好用戶體驗，從對話開始 /</p>
+                    <h2  ><a  href="#">方案費用</a></h2>
+                </div>
+            </div>  
         </div>
 
     </div>
