--- a/testindex.html
+++ b/testindex.html
@@ -136,8 +136,8 @@
             </div>
         </div>
     </div>
-
-    <div class="comment-main">
+ <!--先處理x軸沒有之後 再加回來這個comment section-->
+    <!-- <div class="comment-main">
         <div class="container">
     
           <h2 class="comment-title">好評如潮</h2>
@@ -189,12 +189,12 @@
           </div>
         </div>
       </div>
-      
+       -->
    
         <div class="footer-banner">
             <div class="container">
                 <div class="f-p-btn">
-                    <p>\ 美好用戶體驗，從對話開始 /</p>
+                    <p >\ 美好用戶體驗，從對話開始 /</p>
                     <h2  ><a  href="#">方案費用</a></h2>
                 </div>
             </div>  
