--- a/testindex.html
+++ b/testindex.html
@@ -190,7 +190,13 @@
                 
               </li>
             </ul>
-            <h5 class="dot"></h5>
+            <h5 class="dot-wrap">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                
+            </h5>
           </div>
         </div>
       </div>
