--- a/testindex.html
+++ b/testindex.html
@@ -244,7 +244,7 @@
     </div>
     <div class="footer">
         <div class="container">
-            <p>© 2022 chatTalker. All Rights Reserved.</p>
+            <p class="paragraph">© 2022 chatTalker. All Rights Reserved.</p>
         </div>
     </div>
 </body>
