--- a/testindex.html
+++ b/testindex.html
@@ -200,7 +200,7 @@
         </div>
       </div>
        <!--768變顯示show一個這個comment，上面的要none-->
-       <div class="comment-main2">
+       <!-- <div class="comment-main2">
         <div class="container">
     
           <h2 class="comment-title">好評如潮</h2>
@@ -227,7 +227,7 @@
             </ul>
             <h5 class="dot"></h5>
           </div>
-        </div>
+        </div> -->
       </div>
 
 
