--- a/mission2RoleRecord.html
+++ b/mission2RoleRecord.html
@@ -15,8 +15,8 @@
         <div class="container">
             <h2>任何的角色，我都能給</h2>
             <p>量身打造您想要的專屬服務，幫助您迅速判斷成效、並加快決策</p>
-       
-            <ul class="role4">
+            <div class="role4">
+            <ul >
                 <li>
                     <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/ch01.svg" alt="role1">
                     <h3>活動主</h3>
@@ -38,6 +38,7 @@
                     <p>創造更多可能..</p>
                 </li>
             </ul>
+            </div>
         </div>
     </div>
 
