--- a/mission2RoleRecord.html
+++ b/mission2RoleRecord.html
@@ -10,40 +10,36 @@
 </head>
 <body>
     
-    
-    <div class="role-main">
+    <div class="main">
         <div class="container">
             <h2>任何的角色，我都能給</h2>
             <p>量身打造您想要的專屬服務，幫助您迅速判斷成效、並加快決策</p>
             <div class="role4">
-            <ul >
-                <li class="role-item">
-                    <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/ch01.svg" alt="role1">
-                    <h3>活動主</h3>
-                    <p>用戶數位足跡掌握在手 精準取得客戶輪廓，提供分析</p>
-                </li>
-                <li class="role-item">
-                    <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/ch02.svg" alt="role2">
-                    <h3>創作者</h3>
-                    <p>自由設計互動腳本 輕鬆整合各項數據</p>
-                </li>
-                <li class="role-item">
-                    <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/ch03.svg" alt="role3">
-                    <h3>企業品牌</h3>
-                    <p>多元資料整合，做出服務差異化 幫助企業加速決策</p>
-                </li>
-                <li class="role-item">
-                    <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/ch04.svg" alt="role4">
-                    <h3>其他</h3>
-                    <p>創造更多可能..</p>
-                </li>
-            </ul>
+                <ul>
+                    <li class="role-item">
+                        <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/ch01.svg" alt="item1">
+                        <h3>活動主</h3>
+                        <h4>用戶數位足跡掌握在手 <br> 精準取得客戶輪廓，提供分析</h4>
+                    </li>
+                    <li class="role-item">
+                        <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/ch02.svg" alt="item2">
+                        <h3>創作者</h3>
+                        <h4>自由設計互動腳本<br> 輕鬆整合各項數據</h4>
+                    </li>
+                    <li class="role-item">
+                        <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/ch02.svg" alt="item2">
+                        <h3>企業品牌</h3>
+                        <h4>多元資料整合，做出服務差異化 幫助企業加速決策</h4>
+                    </li>
+                    <li class="role-item">
+                        <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/ch03.svg" alt="item3">
+                        <h3>其他</h3>
+                        <h4>創造更多可能...</h4>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
-
-
-
-
+   
 </body>
 </html>
