--- a/mission1.html
+++ b/mission1.html
@@ -5,15 +5,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="mission1.css">
 </head>
 <body>
     
     <div class="container">
+        <div class="top">
+            <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/IMG/mission1/student-week1/logo-all-dark.svg" alt="leftLogo">
+            <div class="top-right "> 
+                <ul>
+                    <li><a href="#">首頁</a></li>
+                    <li><a href="#">甜點</a></li>
+                    <li><a href="#">登入</a></li>
+                </ul>
+                <div class="shopcart">
+                    <a href="#"><img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/IMG/mission1/student-week1/shopping_cart.png" alt="cart">
+                    </a>
+                </div>
+            </div>  
+        </div>
+        <div class="hero-banner"></div>
+        <div class="main">
+            <div class="menu">
+                <div class="category">甜點類別</div>
+                <ul>
+                    <li class="menu-item">所有甜點（48）</li>
+                    <li class="menu-item">本日精選（10）</li>
+                    <li class="menu-item">人氣推薦（26）</li>
+                    <li class="menu-item">新品上市（12）</li>
+                </ul>
+            </div>
+            <div class="product-list">
+                <ul>
+                    <li class="product-item">
+                        <div class="product-name">
+                            <p>焦糖馬卡龍</p>
+                            <p>NT$ 450</p>
+                        </div>
+                        <p><a href="#">加入購物車</a></p>
+                    </li>
+                    <li class="product-item"></li>
+                    <li class="product-item"></li>
+                    <li class="product-item"></li>
+                    <li class="product-item"></li>
+                    <li class="product-item"></li>
+                </ul>
+            </div>
 
-
-        
+        </div>
     </div>
+        <div class="pagination">
+
+        </div>
 
 </body>
 </html>
