--- a/mission1.html
+++ b/mission1.html
@@ -38,25 +38,74 @@
             </div>
             <div class="product-list">
                 <ul>
-                    <li class="product-item">
+
+                    <div class="item">
+                        <li class="product-item1"></li>
+                        <div class="product-name">
+                            <h2 class="name">焦糖馬卡龍</h2>
+                            <p class="price">NT$ 450</p>
+                        </div>
+                        <div class="addToCart" ><a href="#">加入購物車</a></div>
+                    </div>
+                    <div class="item">
+                        <li class="product-item2"></li>
                         <div class="product-name">
                             <p>焦糖馬卡龍</p>
                             <p>NT$ 450</p>
                         </div>
-                        <p><a href="#">加入購物車</a></p>
-                    </li>
-                    <li class="product-item"></li>
-                    <li class="product-item"></li>
-                    <li class="product-item"></li>
-                    <li class="product-item"></li>
-                    <li class="product-item"></li>
+                        <div class="addToCart" ><a href="#">加入購物車</a></div>
+                    </div>
+                    <div class="item">
+                        <li class="product-item3"></li>
+                        <div class="product-name">
+                            <p>焦糖馬卡龍</p>
+                            <p>NT$ 450</p>
+                        </div>
+                        <div class="addToCart" ><a href="#">加入購物車</a></div>
+                    </div>
+                    <div class="item">
+                        <li class="product-item4"></li>
+                        <div class="product-name">
+                            <p>焦糖馬卡龍</p>
+                            <p>NT$ 450</p>
+                        </div>
+                        <div class="addToCart" ><a href="#">加入購物車</a></div>
+                    </div>
+                    <div class="item">
+                        <li class="product-item5"></li>
+                        <div class="product-name">
+                            <p>焦糖馬卡龍</p>
+                            <p>NT$ 450</p>
+                        </div>
+                        <div class="addToCart" ><a href="#">加入購物車</a></div>
+                    </div>
+                    <div class="item">
+                        <li class="product-item6"></li>
+                        <div class="product-name">
+                            <p>焦糖馬卡龍</p>
+                            <p>NT$ 450</p>
+                        </div>
+                        <div class="addToCart" ><a href="#">加入購物車</a></div>
+                    </div>
                 </ul>
             </div>
 
         </div>
     </div>
         <div class="pagination">
+            <div class="container">
+                <div class="pg-frame">
+                    <div class="img1"><a href="#"><img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/IMG/mission1/student-week1/arrow_left.png" alt="img-1"></a>
+                    </div>
+                    <div class="pg-number">
+                        <div class="p1">1</div>
+                        
+                    </div>
+                    <div class="img2"><a href="#"><img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/IMG/mission1/student-week1/arrow_right.png" alt="img-2"></a>
 
+
+                </div>
+            </div>
         </div>
 
 </body>
