--- a/mission1.html
+++ b/mission1.html
@@ -40,6 +40,10 @@
                 <ul>
 
                     <div class="item">
+                        <div class="heart"><img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/IMG/mission1/student-week1/favorite_border.png" alt="heart"></div>
+                        <div class="speChoice">
+                            <span>本日精選</span>
+                        </div>
                         <li class="product-item1"></li>
                         <div class="product-name">
                             <h2 class="name">焦糖馬卡龍</h2>
@@ -48,6 +52,10 @@
                         <div class="addToCart" ><a href="#">加入購物車</a></div>
                     </div>
                     <div class="item">
+                        <div class="heart"><img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/IMG/mission1/student-week1/favorite_border.png" alt="heart"></div>
+                        <div class="speChoice">
+                            <span>本日精選</span>
+                        </div>
                         <li class="product-item2"></li>
                         <div class="product-name">
                             <p>焦糖馬卡龍</p>
@@ -56,6 +64,10 @@
                         <div class="addToCart" ><a href="#">加入購物車</a></div>
                     </div>
                     <div class="item">
+                        <div class="heart"><img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/IMG/mission1/student-week1/favorite_border.png" alt="heart"></div>
+                        <div class="speChoice">
+                            <span>本日精選</span>
+                        </div>
                         <li class="product-item3"></li>
                         <div class="product-name">
                             <p>焦糖馬卡龍</p>
@@ -64,6 +76,10 @@
                         <div class="addToCart" ><a href="#">加入購物車</a></div>
                     </div>
                     <div class="item">
+                        <div class="heart"><img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/IMG/mission1/student-week1/favorite_border.png" alt="heart"></div>
+                        <div class="speChoice">
+                            <span>本日精選</span>
+                        </div>
                         <li class="product-item4"></li>
                         <div class="product-name">
                             <p>焦糖馬卡龍</p>
@@ -72,6 +88,10 @@
                         <div class="addToCart" ><a href="#">加入購物車</a></div>
                     </div>
                     <div class="item">
+                        <div class="heart"><img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/IMG/mission1/student-week1/favorite_border.png" alt="heart"></div>
+                        <div class="speChoice">
+                            <span>本日精選</span>
+                        </div>
                         <li class="product-item5"></li>
                         <div class="product-name">
                             <p>焦糖馬卡龍</p>
@@ -80,6 +100,10 @@
                         <div class="addToCart" ><a href="#">加入購物車</a></div>
                     </div>
                     <div class="item">
+                        <div class="heart"><img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/IMG/mission1/student-week1/favorite_border.png" alt="heart"></div>
+                        <div class="speChoice">
+                            <span>本日精選</span>
+                        </div>
                         <li class="product-item6"></li>
                         <div class="product-name">
                             <p>焦糖馬卡龍</p>
@@ -98,8 +122,13 @@
                     <div class="img1"><a href="#"><img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/IMG/mission1/student-week1/arrow_left.png" alt="img-1"></a>
                     </div>
                     <div class="pg-number">
-                        <div class="p1">1</div>
-                        
+                        <div class="p1"><a href="#">1</a></div>    
+                    </div>
+                    <div class="pg-number">
+                        <div class="p2"><a href="#">2</a></div>    
+                    </div>
+                    <div class="pg-number">
+                        <div class="p3"><a href="#">3</a></div>    
                     </div>
                     <div class="img2"><a href="#"><img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/IMG/mission1/student-week1/arrow_right.png" alt="img-2"></a>
 
