--- a/testindex.html
+++ b/testindex.html
@@ -46,31 +46,29 @@
         <!--social -->
         <div class="social">
             <div class="container">
-                <div class="social-three">
-                    <p>三大平台，我來搞定</p>
-                    <ul>
-                        <li class="fb">
-                            <div class="fb-photo"></div>
-                            <h2>Facebook Messenger
-                                <p>結合粉絲專頁，提高粉絲互動率 <br>有效經營品牌社群</p>
-                            </h2>
-                        </li>
-                        <li class="fb"><!--套用依樣框小Fb設定-->
-                            <div class="line-photo"></div>
-                            <h2>LINE 官方帳號
-                                <p>融入日常生活，精準傳遞品牌資訊 打造個人化專屬服務</p>
-                            </h2>
-                        </li>
-                        <li class="fb"><!--套用依樣框小Fb設定-->
-                            <div class="ig-photo"></div>
-                            <h2>Instagram 商業帳號
-                                <p>貼近粉絲，提升品牌自然聲量 行銷、抽獎一站完成</p>
-                            </h2>
-                        </li>
-                    </ul>
+                <div class="social-para">
+                  <p>三大平台，我來搞定</p>
                 </div>
-            </div>
-        </div>
+                <div class="social-3">
+                  <ul>
+                    <li>
+                      <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/messenger.svg" alt="fb-1">
+                      <h3 class="socialName">Facebook Messenger</h3>
+                      <h4 class="socialPara">結合粉絲專頁，提高粉絲互動率 有效經營品牌社群</h4>
+                    </li>
+                    <li>
+                      <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/line.svg" alt="line-1">
+                      <h3 class="socialName">LINE 官方帳號</h3>
+                      <h4 class="socialPara">融入日常生活，精準傳遞品牌資訊 打造個人化專屬服務</h4>
+                    </li>
+                    <li>
+                      <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/instagram.svg" alt="ig-1">
+                      <h3 class="socialName">Instagram 商業帳號</h3>
+                      <h4 class="socialPara">貼近粉絲，提升品牌自然聲量 行銷、抽獎一站完成</h4>
+                    </li>
+                  </ul>
+                </div>
+             </div>
 
      <div class="role-start">
         <div class="container">
