--- a/testindex.html
+++ b/testindex.html
@@ -83,19 +83,19 @@
             <p class="roleP">用戶數位足跡掌握在手 精準取得客戶輪廓，提供分析</p>
           </li>
            <li>
-            <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/ch01.svg" alt="role1">
-            <h3 class="roleName">活動主</h3>
-            <p class="roleP">用戶數位足跡掌握在手 精準取得客戶輪廓，提供分析</p>
+            <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/ch02.svg" alt="role2">
+            <h3 class="roleName">創作者</h3>
+            <p class="roleP2">自由設計互動腳本 輕鬆整合各項數據</p>
           </li>
            <li>
-            <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/ch01.svg" alt="role1">
-            <h3 class="roleName">活動主</h3>
-            <p class="roleP">用戶數位足跡掌握在手 精準取得客戶輪廓，提供分析</p>
+            <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/ch03.svg" alt="role3">
+            <h3 class="roleName">企業品牌</h3>
+            <p class="roleP">多元資料整合，做出服務差異化 幫助企業加速決策</p>
           </li>
            <li>
-            <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/ch01.svg" alt="role1">
-            <h3 class="roleName">活動主</h3>
-            <p class="roleP">用戶數位足跡掌握在手 精準取得客戶輪廓，提供分析</p>
+            <img src="https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/chatTalker_images/ch04.svg" alt="role4">
+            <h3 class="roleName">其他</h3>
+            <p class="roleP">創造更多可能...</p>
           </li>
         </ul>
      </div>
