--- a/testindex.html
+++ b/testindex.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
     <script src="jquery.js"></script>
+    <script src="test.js"></script>
     <link rel="stylesheet" href="test.css">
     <link rel="stylesheet" href="reset.css">
 </head>
@@ -245,6 +246,9 @@
         <div class="container">
             <p class="paragraph">© 2022 chatTalker. All Rights Reserved.</p>
         </div>
+    </div>
+    <div class="container">
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
 </body>
 </html>
